# ProcesamientoImagen

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Ejemplos/: FiltroContrasteParalelo.cpp
